# VLC

./: .env.example  .gitignore  00-VCL-Prototype-Build-Spec.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/synthetic/: consents.csv  contract_clauses.csv  contracts.csv  fixtures.json  generate.py  suppliers.csv  telemetry.csv
docs/: adapting-to-your-domain.md  architecture.md  demo-script.md  eu-ai-act-mapping.md  recording.md  roadmap.md
scripts/: record-demo.sh  smoke.py
services/agent-runtime/: Dockerfile  requirements.txt
services/agent-runtime/app/: audit.py  config.py  graph.py  llm.py  main.py  mcp_server.py
services/agent-runtime/app/scenarios/: __init__.py  base.py  penalty_delivery.py  supplier_pii.py
services/agent-runtime/app/tools/: base.py  fixtures.py  live.py  mcp.py
services/agent-runtime/tests/: test_audit_chain.py  test_audit_integrity.py  test_live_stack.py  test_mcp_live.py  test_policy_parity.py  test_worked_use_case.py  test_worked_use_case_paper.py
services/context-graph/: Dockerfile
services/context-graph/seed/: load.cypher  seed-entrypoint.sh
services/feedback-loop/: Dockerfile
services/feedback-loop/app/: collector.py
services/policy-engine/: Dockerfile
services/policy-engine/policies/: vcl.rego  vcl_test.rego
services/policy-engine/tests/: test_policies.py
services/semantic-layer/: Dockerfile
services/semantic-layer/model/cubes/: _placeholder.yml  (+5 more)
services/ui/: Dockerfile  requirements.txt
services/ui/app/: main.py  report.py
(+1 files in other folders)
