[project]
name = "vcl-ref-impl"
version = "0.1.0"
description = "Verifiable Context Layer — reference implementation (companion to Zenodo DOI 10.5281/zenodo.20599942)"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Vibhuraja Bhutani", email = "vibhuis@gmail.com" }]
license = { text = "Apache-2.0" }

# Dev/test environment for `uv run pytest`. Containerised services pin their own
# requirements.txt (see DECISIONS.md D7); this is intentionally the superset needed to
# run the agent-runtime package and its test suite locally.
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "neo4j>=5.19",
    "anthropic>=0.39",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["services/agent-runtime/tests", "services/policy-engine/tests"]
pythonpath = ["services/agent-runtime"]
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.uv]
# This repo is a collection of services, not an installable package; install only deps.
package = false
